<resources>
    <string name="app_name">TFG APP</string>
    <string name="eleccion_de_presupuesto">ELECCION DE PRESUPUESTO</string>
    <string name="elije_el_rango_de_precio_que_estas_dispuesto_a_pagar">Elije el rango de precio que estas dispuesto a pagar</string>
    <string name="_500_1000">500~1000€</string>
    <string name="_1000_1500">1000~1500€</string>
    <string name="_1500">+1500€</string>
    <string name="para_mas_informacion_mantener_pulsado_cualquier_boton_de_rango">Para mas informacion, mantener pulsado cualquier boton de rango</string>
    <string name="seleccion_de_procesador">SELECCION DE PROCESADOR</string>
    <string name="fabricante">FABRICANTE</string>
    <string name="intel">INTEL</string>
    <string name="amd">AMD</string>
    <string name="opciones_recomendadas">Opciones recomendadas</string>
    <string name="volver">Volver</string>
    <string name="seleccion_de_placa_base">Seleccion de Placa Base</string>
    <string name="las_opciones_recomendadas_para_los_procesadores_de_esa_marca_son_las_siguientes">Las opciones recomendadas para los procesadores de esa marca son las siguientes</string>
    <string name="seleccion_de_disco_duro">Seleccion de Disco Duro</string>
    <string name="tipo">TIPO</string>
    <string name="hdd">HDD</string>
    <string name="ssd">SSD</string>
    <string name="seleccion_de_tarjeta_grafica">Seleccion de Tarjeta Grafica</string>
    <string name="nvidia">NVIDIA</string>
    <string name="las_graficas_recomendadas_son_las_siguientes">Las graficas recomendadas son las siguientes</string>
    <string name="seleccion_de_ram">Seleccion de RAM</string>
    <string name="seleccion_de_fuente_de_alimentacion">Seleccion de Fuente de Alimentacion</string>
    <string name="seleccion_de_refrigeracion">Seleccion de Refrigeracion</string>
    <string name="aire">AIRE</string>
    <string name="liquida">LIQUIDA</string>
    <string name="seleccion_de_caja">Seleccion de Caja</string>
    <string name="presupuesto_final">Tu Ordenador Personalizado</string>
    <string name="procesador">Procesador</string>
    <string name="placa_base">Placa Base</string>
    <string name="disco_duro">Disco Duro</string>
    <string name="tarjeta_grafica">Tarjeta Grafica</string>
    <string name="memoria_ram">Memoria RAM</string>
    <string name="fuente_de_alimentacion">Fuente de Alimentacion</string>
    <string name="refrigeracion">Refrigeracion</string>
    <string name="caja">Caja</string>
    <string name="volver_al_inicio">Volver al Inicio</string>
    <string name="masinfo1">Los componentes que formaran el equipo seran de gama baja y gama media, la apariencia del mismo sera basica y la posibilidad de mejora posterior estara limitada.</string>
    <string name="masinfo2">Los componentes que formaran el equipo seran de gama media y gama alta, la apariencia podra ser tanto basica y minimalista como adoptar una apariencia mas vistosa, la posibilidad de mejora posterior ya no sera tan limitada.</string>
    <string name="masinfo3">Los componentes que formaran el equipo seran de gama alta, la apariencia podra ser basica y minimalista como adoptar una apariencia mas vistosa y de calidad, la posibilidad de mejora no estara limitada de ninguna manera.</string>
    <string name="el_fabricante_seleccionado_es">El fabricante del procesador elegido es:</string>
    <string name="recomendacion_fabricante_AMD">, es recomendable elegir una GPU del fabricante AMD ya que su rendimiento mejora hasta un 15%.</string>
    <string name="recomendacion_fabricante_NVIDIA">, es recomendable elegir una GPU del fabricante NVIDIA ya que su rendimiento se vera incrementado."</string>
    <string name="recomendacion_RAM_AMD">, es recomendable elegir memorias RAM cuyas frecuencia maximas sean de 3600Mhz ya que esto cumple con la arquitectura de interconexion de AMD INFINITY FABRIC y mejora el rendimiento general del ordenador considerablemente.</string>
    <string name="recomendacion_RAM_INTEL">, es recomendable elegir memorias RAM cuyas frecuencias sean mayores a 2133 Mhz para obtener un buen rendimiento.</string>

</resources>