<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TenthActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label1_tenth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:text="@string/presupuesto_final"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="377dp"
                android:layout_height="551dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                tools:ignore="NestedScrolling">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label2_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/procesador" />

                    <ListView
                        android:id="@+id/listview1_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="62dp" />

                    <TextView
                        android:id="@+id/label3_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/placa_base" />

                    <ListView
                        android:id="@+id/listview2_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/label4_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disco_duro" />

                    <ListView
                        android:id="@+id/listview3_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/label5_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tarjeta_grafica" />

                    <ListView
                        android:id="@+id/listview4_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/label6_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/memoria_ram" />

                    <ListView
                        android:id="@+id/listview5_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/label7_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fuente_de_alimentacion" />

                    <ListView
                        android:id="@+id/listview6_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/label8_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/refrigeracion" />

                    <ListView
                        android:id="@+id/listview7_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/label9_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/caja" />

                    <ListView
                        android:id="@+id/listview8_tenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="362dp"
                android:layout_height="47dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/boton1_tenth"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volver"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/boton2_tenth"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volver_al_inicio"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>